--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "SecretKey": "This key will be used to sign and verify jwt token",
+    "IntExpireHour":  1
+  }
 }
